--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 .App {
   text-align: center;
 }
@@ -38,7 +40,7 @@
 }
 *{
   box-sizing: border-box;
-}
+  font-family: 'Lobster', cursive;}
 /* Seat Booking */
 
 
