--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montagu+Slab&display=swap');
 .App {
   text-align: center;
 }
@@ -40,7 +39,9 @@
 }
 *{
   box-sizing: border-box;
-  font-family: 'Lobster', cursive;}
+  font-family: 'Montagu Slab', serif;
+}
+
 /* Seat Booking */
 
 
